--- a/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Usuario/Edit.cshtml
+++ b/MudanzasGuaymasWeb/MudanzasGuaymasWeb/Views/Usuario/Edit.cshtml
@@ -23,7 +23,7 @@
 
 <div class="Formulario">
     <div class="Formulario2">
-        @using (Html.BeginForm())
+        @using (Html.BeginForm("editar","Usuario"))
         {
             @Html.AntiForgeryToken()
             <h4>Usuario</h4>
